[metadata]
name = ddsinpy
version = 0.0.2
author = Bousseta Walid
author_email = wali.bousseta@gmail.com
description =  Robust Dynamic Data Structures in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walidbou6/ddspy
project_urls =
    Bug Tracker = https://github.com/walidbou6/ddspy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ddspy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ddspy
